app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {

    @font-face {
        font-family: "myriadpro";
        src: url("/assets/fonts/myriadpro/myriadpro-light.woff2") format("woff2"),
            url("/assets/fonts/myriadpro/myriadpro-light.woff") format("woff"),
            url("/assets/fonts/myriadpro/myriadpro-light.ttf") format("truetype");
        font-weight: 300;
        font-display: swap;
    }

    @font-face {
        font-family: "myriadpro";
        src: url("/assets/fonts/myriadpro/myriadpro-bold.woff2") format("woff2"),
            url("/assets/fonts/myriadpro/myriadpro-bold.woff") format("woff"),
            url("/assets/fonts/myriadpro/myriadpro-bold.ttf") format("truetype");
        font-weight: 700;
        font-display: swap;
    }

    @font-face {
        font-family: "optionyx";
        src: url("/assets/fonts/optionyx/optionyx.woff2") format("woff2"),
            url("/assets/fonts/optionyx/optionyx.woff") format("woff"),
            url("/assets/fonts/optionyx/optionyx.ttf") format("truetype"),
            url("/assets/fonts/optionyx/optionyx.otf") format("opentype");
        font-weight: 400;
        font-display: swap;
    }
}

@layer components {

    html {
        scroll-behavior: smooth;
    }

    * {
        @apply font-myriadpro font-light text-paragraph text-black
    }

    h1 {
        @apply font-optionyx text-heading
    }

    h2, h3, h4, h5, h6 {
        @apply text-subheading uppercase font-bold
    }

    ul, ol {
        @apply list-disc list-inside pl-4
    }

    img {
        @apply drop-shadow-default
    }

    input, textarea {
        @apply text-black
    }

    .spinner {
        width: 20px;
        height: 20px;
        position: relative;
    }

    .spinner::before,
    .spinner::after {
        content: "";
        width: 100%;
        height: 100%;
        border-radius: 50%;
        position: absolute;
        top: 0;
        left: 0;
        border: 3px solid transparent;
        border-top-color: #523B6D;
        animation: spin 1s linear infinite;
    }

    .spinner::after {
        animation-delay: 0.5s;
    }

    @keyframes spin {
        from {
            transform: rotate(0deg);
        }

        to {
            transform: rotate(360deg);
        }
    }

    .protea-image {
        @apply hidden w-[250px]
    }

    /* extra-small */
    @media (min-height: 500px) {
        .protea-image {
            @apply block
        }

        .protea-container {
            @apply h-[250px]
        }
    }

    /* small */
    @media (min-height: 525px) {
        .protea-image {
            @apply w-[275px]
        }

        .protea-container {
            @apply h-[300px]
        }
    }

    /* medium */
    @media (min-height: 575px) {
        .protea-container {
            @apply h-[325px] -mr-2
        }

        .protea-image {
            @apply w-[305px]
        }
    }

    /* large */
    @media (min-height: 625px) {
        .protea-container {
            @apply h-[375px] -mr-4
        }

        .protea-image {
            @apply w-[315px]
        }
    }

    /* extra large */
    @media (min-height: 675px) {
        .protea-container {
            @apply h-[425px]
        }

        .protea-image {
            @apply w-[375px]
        }
    }

    .swiper-container-free-mode>.swiper-wrapper {
        -webkit-transition-timing-function: linear;
        -o-transition-timing-function: linear;
        transition-timing-function: linear;
        margin: 0 auto;
    }
}

